--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             height: max-content;
         }
         #a {
-            transition: 150ms;
+            transition: 140ms;
         }
         span {
             color: #992d2e
@@ -29,11 +29,11 @@
         }
         #a:hover {
             color: blue;
-            background-color: yellow;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="lindo">O <a href="https://linktr.ee/valverissimo/"><span id="a"> Val Verissimo</span></a> é lindo.</h1>
+    <h1 class="lindo hvr-shadow-radial">O <a href="https://linktr.ee/valverissimo/"><span id="a"> Val Verissimo</span></a> é lindo.</h1>
 </body>
 </html>
