--- a/math.html
+++ b/math.html
@@ -8,8 +8,8 @@
     <script src="main.js" type="text/javascript"></script>
 </head>
 <body>
-    <input type="text"/>
-    <input type="text"/>
-    <input type="button"/>
+    <input type="text" id="my_input1"/>
+    <input type="text" id="my_input2"/>
+    <input type="button" value="Add Them Together" onclick="doMath();"/>
 </body>
 </html>
