--- a/math.html
+++ b/math.html
@@ -10,10 +10,10 @@
 <body>
     <input type="text" id="my_input1"/>
     <input type="text" id="my_input2"/>
-    <input type="button" value="Soma eles!" onclick="doMath(soma);"/>
-    <input type="button" value="Subtrai eles!" onclick="doMath(subtrai);"/>
-    <input type="button" value="Multiplica eles!" onclick="doMath(multiplica);"/>
-    <input type="button" value="Potencia  eles!" onclick="doMath(potencia);"/>
-    <input type="button" value="Divide eles!" onclick="doMath(divide);"/>
+    <input type="button" value="Soma eles!" onclick="doMath("soma");"/>
+    <input type="button" value="Subtrai eles!" onclick="doMath("subtrai");"/>
+    <input type="button" value="Multiplica eles!" onclick="doMath("multiplica");"/>
+    <input type="button" value="Potencia  eles!" onclick="doMath("potencia");"/>
+    <input type="button" value="Divide eles!" onclick="doMath("divide");"/>
 </body>
 </html>
