--- a/math.html
+++ b/math.html
@@ -8,12 +8,12 @@
     <script src="main.js" type="text/javascript"></script>
 </head>
 <body>
-    <input type="text" id="my_input1"/>
-    <input type="text" id="my_input2"/>
-    <input type="button" value="Soma eles!" onclick="doMath("soma");"/>
-    <input type="button" value="Subtrai eles!" onclick="doMath("subtrai");"/>
-    <input type="button" value="Multiplica eles!" onclick="doMath("multiplica");"/>
-    <input type="button" value="Potencia  eles!" onclick="doMath("potencia");"/>
-    <input type="button" value="Divide eles!" onclick="doMath("divide");"/>
+    <input type="text" id="my_input1">
+    <input type="text" id="my_input2">
+    <input type="button" value="Soma eles!" onclick="doMath("soma");">
+    <input type="button" value="Subtrai eles!" onclick="doMath("subtrai");">
+    <input type="button" value="Multiplica eles!" onclick="doMath("multiplica");">
+    <input type="button" value="Potencia  eles!" onclick="doMath("potencia");">
+    <input type="button" value="Divide eles!" onclick="doMath("divide");">
 </body>
 </html>
